--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "glob": "^8.1.0",
     "sass": "^1.64.1",
-    "vite": "^4.4.5",
-    "glob": "^8.1.0"
+    "vite": "^4.4.5"
   },
   "author": "Oleksandr Siryi <oleksandrsiryy@gmail.com>",
   "license": "",
   "dependencies": {
+    "modern-normalize": "^2.0.0",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
