--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "",
   "dependencies": {
     "modern-normalize": "^2.0.0",
+    "nanoid": "^4.0.2",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
